--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <h2 class="section__title">About Me</h2>
       <span class="section__subtitle">My Intoduction</span>
       <div class="about__container container grid">
-        <img src="assets/img/Prabhat.jpg" alt="About image" class="about__img" />
+        <img src="assets/img/Prabhat.png" alt="About image" class="about__img" />
         <div class="about__data">
           <p class="about__description">
             Greetings! I'm Prabhat Tripathi,<br />
